--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    
+
     <img class="backdrop-img" src="./images/vivek-vg-yPlyDFhGwb8-unsplash.jpg" alt="background image">
     <div class="logo-container">
         <div id="logo">
@@ -33,27 +33,27 @@
                 <legend>Let's do this!</legend>
 
                 <div class="inputs">
-                    <div style="float:left;">
+                    <div>
                         <label for="first-name">FIRST NAME</label>
-                        <input type="text" id="first-name" name="first-name" required minlength="2" pattern="[A-Za-z]+">
+                        <input type="text" id="first-name" name="first-name" required minlength="2" pattern="[A-Za-z]+" placeholder="John">
                     </div>
 
                     <div>
                         <label for="last-name">LAST NAME</label>
-                        <input type="text" id="last-name" name="last-name" required minlength="2" pattern="[A-Za-z]+">
+                        <input type="text" id="last-name" name="last-name" required minlength="2" pattern="[A-Za-z]+" placeholder="Smith">
                     </div>
 
-                    <div style="float:left;">
+                    <div>
                         <label for="email">EMAIL</label>
-                        <input type="email" name="email" id="email" required>
+                        <input type="email" name="email" id="email" required placeholder="johnsmith@gmail.com">
                     </div>
 
                     <div>
                         <label for="phone">PHONE NUMBER</label>
-                        <input type="tel" name="phone" id="phone" pattern="^\+\d{1,14}$">
+                        <input type="tel" name="phone" id="phone" pattern="^\+\d{1,14}$" placeholder="+44 123 456 7891">
                     </div>
 
-                    <div style="float:left;">
+                    <div>
                         <label for="password">PASSWORD</label>
                         <input class="error" type="password" name="password" id="password" required
                             pattern="^(?=.*\d)(?=.*[^a-zA-Z0-9\s]).*$">
