--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Sign up!</title>
     <link rel="stylesheet" href="style.css">
     <script src="./script.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@200..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -23,7 +26,7 @@
         <div class="header">
             <p>It's our mission to supply reliable energy that doesn't cost the planet. Now that is something you can
                 get behind! <br>
-                The future is <i>renewable</i>. The future is <b>Wynd</b>.</p>
+                The future is <i>renewable</i>. The future is <b>Wynd.</b></p>
 
             <p style="font-weight: 600;">Sign up <i>now</i> to get started.</p>
         </div>
@@ -35,12 +38,14 @@
                 <div class="inputs">
                     <div>
                         <label for="first-name">FIRST NAME</label>
-                        <input type="text" id="first-name" name="first-name" required minlength="2" pattern="[A-Za-z]+" placeholder="John">
+                        <input type="text" id="first-name" name="first-name" required minlength="2" pattern="[A-Za-z]+"
+                            placeholder="John">
                     </div>
 
                     <div>
                         <label for="last-name">LAST NAME</label>
-                        <input type="text" id="last-name" name="last-name" required minlength="2" pattern="[A-Za-z]+" placeholder="Smith">
+                        <input type="text" id="last-name" name="last-name" required minlength="2" pattern="[A-Za-z]+"
+                            placeholder="Smith">
                     </div>
 
                     <div>
@@ -55,13 +60,13 @@
 
                     <div>
                         <label for="password">PASSWORD</label>
-                        <input class="error" type="password" name="password" id="password" required
+                        <input type="password" name="password" id="password" required
                             pattern="^(?=.*\d)(?=.*[^a-zA-Z0-9\s]).*$">
                     </div>
 
                     <div>
                         <label for="confirm-password">CONFIRM PASSWORD</label>
-                        <input class="error" type="password" name="confirm-password" id="confirm-password" required>
+                        <input type="password" name="confirm-password" id="confirm-password" required>
                     </div>
                 </div>
             </div>
